k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ogrenci-sistemi
  labels:
    name: ogrenci-sistemi
    environment: production
